[package]
name = "example-money-transfer-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Saga pattern in Rust — debit + credit with durable compensation on failure. SQLite ledger."

[[bin]]
name = "money-transfer"
path = "src/main.rs"

[dependencies]
resonate = { package = "resonate-sdk", git = "https://github.com/resonatehq/resonate-sdk-rs", branch = "main" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
